# mm-tracking

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
check/: CMakeLists.txt
check/src/: check.cpp
documentation/: draw-io_tracking-classes.xml  draw-io_tracking-powerwall-setup.xml  draw-io_tracking-schema.xml  tracking_docu.tex
test/: CMakeLists.txt
test/src/: test.cpp
tracking/: CMakeLists.txt  FindNATNET.cmake  tracking.props
tracking/conf/: tracking.conf
tracking/include/: NatNetDevicePool.h  Tracker.h  TrackingMath.h  TrackingUtilizer.h  VrpnButtonDevice.h  VrpnDevice.h  stdafx.h
tracking/src/: NatNetDevicePool.cpp  Tracker.cpp  TrackingMath.cpp  TrackingUtilizer.cpp  VrpnButtonDevice.cpp
